--- a/data/cards/00295517.yaml
+++ b/data/cards/00295517.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: MAMA-EN079
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: LOD-078
     set_name: Legacy of Darkness
     rarities:
@@ -115,6 +119,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: MAMA-DE079
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SD4-FR020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -144,6 +152,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: MAMA-FR079
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SD4-IT020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -173,6 +185,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: MAMA-IT079
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SD4-PT020
     set_name: 'Structure Deck: Fury from the Deep'
@@ -190,6 +206,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: MAMA-PT079
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: MA-30
     set_name: Mythological Age
