--- a/data/cards/02857636.yaml
+++ b/data/cards/02857636.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-EN071
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FLOD-DE046
     set_name: Flames of Destruction
@@ -80,6 +84,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-DE071
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FLOD-FR046
     set_name: Flames of Destruction
@@ -94,6 +102,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-FR071
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FLOD-IT046
     set_name: Flames of Destruction
@@ -108,6 +120,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-IT071
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: FLOD-PT046
     set_name: Flames of Destruction
@@ -122,6 +138,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-PT071
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FLOD-JP046
     set_name: Flames of Destruction
