--- a/data/cards/04031928.yaml
+++ b/data/cards/04031928.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN078
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: SDY-032
     set_name: 'Starter Deck: Yugi'
     rarities:
@@ -128,6 +132,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE078
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DDY-F030
     set_name: 'Starter Deck: Yugi'
@@ -162,6 +170,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR078
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MIY-I030
     set_name: 'Starter Deck: Yugi'
@@ -196,6 +208,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT078
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIY-P030
     set_name: 'Starter Deck: Yugi'
@@ -221,6 +237,10 @@ sets:
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
+  - set_number: MAMA-PT078
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ''
     set_name: Vol.5
