--- a/data/cards/04280258.yaml
+++ b/data/cards/04280258.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-EN075
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: RIRA-DE048
     set_name: Rising Rampage
@@ -81,6 +85,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-DE075
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: RIRA-FR048
     set_name: Rising Rampage
@@ -95,6 +103,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-FR075
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: RIRA-IT048
     set_name: Rising Rampage
@@ -109,6 +121,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-IT075
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: RIRA-PT048
     set_name: Rising Rampage
@@ -123,6 +139,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-PT075
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: RIRA-JP048
     set_name: Rising Rampage
