--- a/data/cards/08198620.yaml
+++ b/data/cards/08198620.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN062
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PGLD-DE015
     set_name: Premium Gold
@@ -67,6 +71,10 @@ sets:
     - Gold Secret Rare
   - set_number: BLHR-DE066
     set_name: "Battles of Legend: Hero's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE062
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -78,6 +86,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR062
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PGLD-IT015
     set_name: Premium Gold
@@ -87,6 +99,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT062
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PGLD-PT015
     set_name: Premium Gold
@@ -94,6 +110,10 @@ sets:
     - Gold Secret Rare
   - set_number: BLHR-PT066
     set_name: "Battles of Legend: Hero's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT062
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
