--- a/data/cards/08949584.yaml
+++ b/data/cards/08949584.yaml
@@ -63,6 +63,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: MAMA-EN081
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GENF-DE098
     set_name: Generation Force
@@ -90,6 +94,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: MAMA-DE081
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GENF-FR098
     set_name: Generation Force
@@ -117,6 +125,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: MAMA-FR081
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GENF-IT098
     set_name: Generation Force
@@ -144,6 +156,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: MAMA-IT081
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SDHS-PT026
     set_name: HERO Strike Structure Deck
@@ -166,6 +182,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: MAMA-PT081
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PP13-JP010
     set_name: Premium Pack 13
