--- a/data/cards/09486959.yaml
+++ b/data/cards/09486959.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-EN069
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE046
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-DE069
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR046
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-FR069
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT046
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-IT069
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT046
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MAMA-PT069
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP046
     set_name: Battle of Chaos
