--- a/data/cards/10045474.yaml
+++ b/data/cards/10045474.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: MAMA-EN100
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FLOD-DE077
     set_name: Flames of Destruction
@@ -86,6 +90,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: MAMA-DE100
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FLOD-FR077
     set_name: Flames of Destruction
@@ -111,6 +119,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: MAMA-FR100
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FLOD-IT077
     set_name: Flames of Destruction
@@ -136,6 +148,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: MAMA-IT100
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: FLOD-PT077
     set_name: Flames of Destruction
@@ -161,6 +177,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: MAMA-PT100
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FLOD-JP077
     set_name: Flames of Destruction
