--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN089
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: IGAS-DE067
     set_name: Ignition Assault
@@ -90,6 +94,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE089
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: IGAS-FR067
     set_name: Ignition Assault
@@ -105,6 +113,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR089
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: IGAS-IT067
     set_name: Ignition Assault
@@ -120,6 +132,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT089
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: IGAS-PT067
     set_name: Ignition Assault
@@ -135,6 +151,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT089
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: IGAS-JP067
     set_name: Ignition Assault
