--- a/data/cards/15693423.yaml
+++ b/data/cards/15693423.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN099
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CIBR-DE077
     set_name: Circuit Break
@@ -68,6 +72,10 @@ sets:
     - Ultra Rare
   - set_number: GFTP-DE126
     set_name: Ghosts From the Past (set)
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE099
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -87,6 +95,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR099
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CIBR-IT077
     set_name: Circuit Break
@@ -104,6 +116,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT099
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CIBR-PT077
     set_name: Circuit Break
@@ -119,6 +135,10 @@ sets:
     - Ultra Rare
   - set_number: GFTP-PT126
     set_name: Ghosts From the Past (set)
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT099
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
