--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Super Rare
+  - set_number: MAMA-EN076
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: SDD-003
     set_name: 'Yu-Gi-Oh! Worldwide Edition: Stairway to the Destined Duel promotional cards'
     rarities:
@@ -110,6 +114,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Super Rare
+  - set_number: MAMA-DE076
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: WC4-F003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -144,6 +152,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Super Rare
+  - set_number: MAMA-FR076
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: WC4-I003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -178,6 +190,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Super Rare
+  - set_number: MAMA-IT076
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LCJW-PT099
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -195,6 +211,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Super Rare
+  - set_number: MAMA-PT076
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories promotional cards'
