--- a/data/cards/20899496.yaml
+++ b/data/cards/20899496.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN101
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: ROTD-DE079
     set_name: Rise of the Duelist
@@ -54,6 +58,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE101
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: ROTD-FR079
     set_name: Rise of the Duelist
@@ -63,6 +71,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR101
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: ROTD-IT079
     set_name: Rise of the Duelist
@@ -72,6 +84,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT101
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: ROTD-PT079
     set_name: Rise of the Duelist
@@ -81,6 +97,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT101
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ROTD-JP079
     set_name: Rise of the Duelist
