--- a/data/cards/22110647.yaml
+++ b/data/cards/22110647.yaml
@@ -42,8 +42,8 @@ text:
     等级7怪兽×2
     1回合1次，可移除此卡的1个超量素材并发动。特殊召唤2只「幻獸機衍生物」（机械族・风・星3・攻／守0）至我方场上。只要我方场上存在衍生物，此卡不会因战斗以及卡牌效果而破坏。此外，1回合1次，可释放我方场上1只冠有「幻獸機」之名的怪兽并发动。选择场上的1张卡牌并破坏。此效果发动的回合，此卡不可攻击。
   zh-CN: |-
-    7星怪兽×2
-    ①：1回合1次，把这张卡1个XYZ素材取除才能发动。在自己场上把2只「幻兽机衍生物」（机械族·风·3星·攻/守0）特殊召唤。②：只要自己场上有衍生物存在，这张卡不会被战斗·效果破坏。③：1回合1次，把自己场上1只「幻兽机」怪兽解放，以场上1张卡为对象才能发动。那张卡破坏。这个效果发动的回合，这张卡不能攻击。
+    等级7怪兽×2
+    ①：1回合1次，去除此卡的1个超量素材可以发动。将2只"幻兽机衍生物"（机械族・风・星3・攻／守0）特殊召唤至自己场上。②：只要自己场上有衍生物存在，此卡不会因战斗・效果被破坏。③：1回合1次，解放自己场上的1只"幻兽机"怪兽，以场上的1张卡为对象可以发动。将该卡破坏。发动此效果的回合中，此卡不可攻击。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: WIND
@@ -179,6 +179,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: TM01-SC071
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
