--- a/data/cards/22751868.yaml
+++ b/data/cards/22751868.yaml
@@ -12,7 +12,7 @@ name:
   ko: 풍운의 자동기계성
   ko_rr:
   zh-TW:
-  zh-CN: 风云机巧城
+  zh-CN: 风云机偶城
 text:
   en: |-
     When a face-up "Karakuri" monster you control selects an opponent's face-up monster as an attack target, you can change the target's battle position. When this face-up card on the field is destroyed and sent to the Graveyard, you can select 1 Level 4 or higher "Karakuri" monster in your Graveyard, and Special Summon it.
@@ -31,7 +31,7 @@ text:
     자신 필드 위에 앞면 표시로 존재하는 "자동기계"라는 이름이 붙은 몬스터가, 상대 필드 위에 앞면 표시로 존재하는 몬스터를 공격 대상으로 선택했을 때, 그 상대 몬스터 1장의 표시 형식을 변경할 수 있다. 또한, 필드 위에 앞면 표시로 존재하는 이 카드가 파괴되어 묘지로 보내졌을 때, 자신의 묘지에 존재하는 레벨 4 이상의 "자동기계"라는 이름이 붙은 몬스터 1장을 선택하고 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    自己场上表侧表示存在的名字带有「机巧」的怪兽把对方场上表侧表示存在的怪兽选择作为攻击对象时，可以把那1只对方怪兽的表示形式变更。此外，场上表侧表示存在的这张卡被破坏送去墓地时，可以选择自己墓地存在的1只4星以上的名字带有「机巧」的怪兽特殊召唤。
+    ①：自己的"机偶"怪兽选择对手的表侧表示怪兽为攻击对象时，以1只该对手怪兽为对象可以发动。变更该对手怪兽的表示形式。②：场上表侧表示的此卡被破坏并被送至墓地时，以自己墓地1只等级4以上的"机偶"怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Spell
 property: Field
 series:
@@ -67,6 +67,11 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC112
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
