--- a/data/cards/23187256.yaml
+++ b/data/cards/23187256.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN067
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLHR-DE093
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE067
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLHR-FR093
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR067
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLHR-IT093
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT067
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLHR-PT093
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT067
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VB18-JP002
     set_name: The Valuable Book 18 promotional cards
