--- a/data/cards/25311006.yaml
+++ b/data/cards/25311006.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN090
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: ROTD-DE062
     set_name: Rise of the Duelist
@@ -84,6 +88,10 @@ sets:
     - Starlight Rare
   - set_number: MP21-DE143
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE090
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -96,6 +104,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR090
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: ROTD-IT062
     set_name: Rise of the Duelist
@@ -106,6 +118,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT090
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: ROTD-PT062
     set_name: Rise of the Duelist
@@ -114,6 +130,10 @@ sets:
     - Starlight Rare
   - set_number: MP21-PT143
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT090
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
