--- a/data/cards/27581098.yaml
+++ b/data/cards/27581098.yaml
@@ -46,6 +46,10 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Common
+  - set_number: MAMA-EN095
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN119
     set_name: Dark Revelation Volume 4
     rarities:
@@ -59,11 +63,19 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Common
+  - set_number: MAMA-DE095
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EEN-FR059
     set_name: Elemental Energy
     rarities:
     - Common
+  - set_number: MAMA-FR095
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: EEN-IT059
     set_name: Elemental Energy
@@ -73,6 +85,15 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Common
+  - set_number: MAMA-IT095
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MAMA-PT095
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EEN-JP059
     set_name: Elemental Energy
