--- a/data/cards/33041277.yaml
+++ b/data/cards/33041277.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MAMA-EN087
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CYHO-DE059
     set_name: Cybernetic Horizon
@@ -56,6 +60,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MAMA-DE087
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CYHO-FR059
     set_name: Cybernetic Horizon
@@ -65,6 +73,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MAMA-FR087
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CYHO-IT059
     set_name: Cybernetic Horizon
@@ -74,6 +86,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MAMA-IT087
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CYHO-PT059
     set_name: Cybernetic Horizon
@@ -83,6 +99,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MAMA-PT087
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CYHO-JP059
     set_name: Cybernetic Horizon
