--- a/data/cards/38745520.yaml
+++ b/data/cards/38745520.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MAMA-EN091
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE032
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MAMA-DE091
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR032
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MAMA-FR091
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT032
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MAMA-IT091
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT032
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MAMA-PT091
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP032
     set_name: 'Deck Build Pack: Grand Creators'
