--- a/data/cards/40110009.yaml
+++ b/data/cards/40110009.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: MAMA-EN088
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: MYFI-DE025
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: MAMA-DE088
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MYFI-FR025
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: MAMA-FR088
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MYFI-IT025
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: MAMA-IT088
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MYFI-PT025
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: MAMA-PT088
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBMF-JP025
     set_name: 'Deck Build Pack: Mystic Fighters'
