--- a/data/cards/40252269.yaml
+++ b/data/cards/40252269.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: MAMA-EN086
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: MACR-DE051
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: MAMA-DE086
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MACR-FR051
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: MAMA-FR086
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MACR-IT051
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: MAMA-IT086
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MACR-PT051
     set_name: Maximum Crisis
     rarities:
     - Rare
+  - set_number: MAMA-PT086
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: MACR-JP051
     set_name: Maximum Crisis
