--- a/data/cards/41578483.yaml
+++ b/data/cards/41578483.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN064
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED2-DE003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -71,6 +75,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE064
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LED2-FR003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -80,6 +88,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR064
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED2-IT003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -89,6 +101,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT064
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -98,6 +114,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT064
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP19-JP003
     set_name: 'Duelist Pack: Legend Duelist 2'
