--- a/data/cards/49202162.yaml
+++ b/data/cards/49202162.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: OTS Tournament Pack 17
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-EN073
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLHR-DE046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -103,6 +107,10 @@ sets:
     set_name: OTS Tournament Pack 17
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-DE073
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLHR-FR046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -116,6 +124,10 @@ sets:
     set_name: OTS Tournament Pack 17
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-FR073
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLHR-IT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -129,6 +141,10 @@ sets:
     set_name: OTS Tournament Pack 17
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-IT073
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLHR-PT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -142,6 +158,10 @@ sets:
     set_name: OTS Tournament Pack 17
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-PT073
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LVP2-JP001
     set_name: LINK VRAINS Pack 2
