--- a/data/cards/53208660.yaml
+++ b/data/cards/53208660.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: MAMA-EN085
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SDMP-DE026
     set_name: Master of Pendulum Structure Deck
@@ -56,6 +60,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: MAMA-DE085
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SDMP-FR026
     set_name: Master of Pendulum Structure Deck
@@ -65,6 +73,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: MAMA-FR085
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SDMP-IT026
     set_name: Master of Pendulum Structure Deck
@@ -74,6 +86,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: MAMA-IT085
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SDMP-PT026
     set_name: Master of Pendulum Structure Deck
@@ -83,6 +99,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: MAMA-PT085
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SD29-JP026
     set_name: 'Structure Deck: Master of Pendulum'
