--- a/data/cards/53334471.yaml
+++ b/data/cards/53334471.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: MAMA-EN098
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CSOC-DE079
     set_name: Crossroads of Chaos
@@ -70,6 +74,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: MAMA-DE098
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CSOC-FR079
     set_name: Crossroads of Chaos
@@ -87,6 +95,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: MAMA-FR098
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CSOC-IT079
     set_name: Crossroads of Chaos
@@ -104,6 +116,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: MAMA-IT098
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: HISU-PT060
     set_name: Hidden Summoners
@@ -113,6 +129,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: MAMA-PT098
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CSOC-JP079
     set_name: Crossroads of Chaos
