--- a/data/cards/53341729.yaml
+++ b/data/cards/53341729.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: MAMA-EN096
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: DT07-EN097
     set_name: Duel Terminal 7b
     rarities:
@@ -74,6 +78,10 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: MAMA-DE096
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GLAS-FR069
     set_name: Gladiator's Assault
@@ -91,6 +99,10 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: MAMA-FR096
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GLAS-IT069
     set_name: Gladiator's Assault
@@ -108,11 +120,19 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: MAMA-IT096
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: AP07-PT025
     set_name: Astral Pack Seven
     rarities:
     - Common
+  - set_number: MAMA-PT096
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: GLAS-JP069
     set_name: Gladiator's Assault
