--- a/data/cards/57111330.yaml
+++ b/data/cards/57111330.yaml
@@ -65,26 +65,46 @@ sets:
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-EN061
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DIFO-DE005
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-DE061
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DIFO-FR005
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-FR061
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DIFO-IT005
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-IT061
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIFO-PT005
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-PT061
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DIFO-JP005
     set_name: Dimension Force
