--- a/data/cards/58921041.yaml
+++ b/data/cards/58921041.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-EN092
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: PCY-002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Yugi the Destiny promotional cards'
     rarities:
@@ -112,6 +116,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-DE092
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PCY-F002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Yugi the Destiny promotional cards'
@@ -146,6 +154,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-FR092
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PCY-I002
     set_name: 'Yu-Gi-Oh! Power of Chaos: Yugi the Destiny promotional cards'
@@ -180,6 +192,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-IT092
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: OP01-PT011
     set_name: OTS Tournament Pack 1
@@ -202,6 +218,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-PT092
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: G4-07
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist: Yugi Deck promotional cards'
