--- a/data/cards/66309175.yaml
+++ b/data/cards/66309175.yaml
@@ -58,26 +58,46 @@ sets:
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-EN065
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DIFO-DE037
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-DE065
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DIFO-FR037
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-FR065
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DIFO-IT037
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-IT065
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIFO-PT037
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-PT065
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DIFO-JP037
     set_name: Dimension Force
