--- a/data/cards/68462976.yaml
+++ b/data/cards/68462976.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: MAMA-EN083
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CSOC-DE061
     set_name: Crossroads of Chaos
@@ -94,6 +98,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: MAMA-DE083
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CSOC-FR061
     set_name: Crossroads of Chaos
@@ -123,6 +131,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: MAMA-FR083
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CSOC-IT061
     set_name: Crossroads of Chaos
@@ -152,6 +164,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: MAMA-IT083
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LDK2-PTY33
     set_name: Legendary Decks II
@@ -173,6 +189,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: MAMA-PT083
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CSOC-JP061
     set_name: Crossroads of Chaos
