--- a/data/cards/73639099.yaml
+++ b/data/cards/73639099.yaml
@@ -72,26 +72,46 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-EN074
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLHR-DE049
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-DE074
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLHR-FR049
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-FR074
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLHR-IT049
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-IT074
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLHR-PT049
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: MAMA-PT074
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: LVP2-JP061
     set_name: LINK VRAINS Pack 2
