--- a/data/cards/73915051.yaml
+++ b/data/cards/73915051.yaml
@@ -105,6 +105,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-EN077
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: SDJ-041
     set_name: 'Starter Deck: Joey'
     rarities:
@@ -190,6 +194,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-DE077
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DDJ-F041
     set_name: 'Starter Deck: Joey'
@@ -263,6 +271,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-FR077
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MIJ-I041
     set_name: 'Starter Deck: Joey'
@@ -336,6 +348,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-IT077
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIJ-P041
     set_name: 'Starter Deck: Joey'
@@ -392,6 +408,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: MAMA-PT077
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: L3-06
     set_name: 'Limited Edition 3: Joey Pack'
