--- a/data/cards/75452921.yaml
+++ b/data/cards/75452921.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN070
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: FLOD-DE045
     set_name: Flames of Destruction
@@ -67,6 +71,10 @@ sets:
     - Super Rare
   - set_number: MP19-DE026
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-DE070
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
@@ -78,6 +86,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR070
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FLOD-IT045
     set_name: Flames of Destruction
@@ -87,6 +99,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT070
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: FLOD-PT045
     set_name: Flames of Destruction
@@ -94,6 +110,10 @@ sets:
     - Super Rare
   - set_number: MP19-PT026
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Ultra Rare
+  - set_number: MAMA-PT070
+    set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   ja:
