--- a/data/cards/80532587.yaml
+++ b/data/cards/80532587.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-EN063
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CT14-DE009
     set_name: 2017 Mega-Tins
@@ -71,6 +75,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-DE063
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CT14-FR009
     set_name: 2017 Mega-Tins
@@ -80,6 +88,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-FR063
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CT14-IT009
     set_name: 2017 Mega-Tins
@@ -89,6 +101,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-IT063
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CT14-PT009
     set_name: 2017 Mega-Tins
@@ -98,6 +114,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-PT063
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP15-JP033
     set_name: Extra Pack 2015
