--- a/data/cards/82732705.yaml
+++ b/data/cards/82732705.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-EN094
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   - set_number: DCR-049
     set_name: Dark Crisis
     rarities:
@@ -115,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-DE094
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DR1-FR211
     set_name: Dark Revelation Volume 1
@@ -149,6 +157,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-FR094
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DR1-IT211
     set_name: Dark Revelation Volume 1
@@ -183,6 +195,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-IT094
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DR1-PT211
     set_name: Dark Revelation Volume 1
@@ -200,6 +216,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-PT094
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: 304-049
     set_name: Power of the Guardian
