--- a/data/cards/84224627.yaml
+++ b/data/cards/84224627.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
+  - set_number: MAMA-EN066
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PGL2-DE016
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
+  - set_number: MAMA-DE066
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PGL2-FR016
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
+  - set_number: MAMA-EN066
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PGL2-IT016
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
+  - set_number: MAMA-IT066
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PGL2-PT016
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
+  - set_number: MAMA-PT066
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PP17-JP016
     set_name: Premium Pack 17
