--- a/data/cards/84332527.yaml
+++ b/data/cards/84332527.yaml
@@ -65,26 +65,46 @@ sets:
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-EN060
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DIFO-DE003
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-DE060
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DIFO-FR003
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-FR060
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DIFO-IT003
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-IT060
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIFO-PT003
     set_name: Dimension Force
     rarities:
     - Common
+  - set_number: MAMA-PT060
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DIFO-JP003
     set_name: Dimension Force
