--- a/data/cards/85289965.yaml
+++ b/data/cards/85289965.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-EN072
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CYHO-DE034
     set_name: Cybernetic Horizon
@@ -89,6 +93,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-DE072
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CYHO-FR034
     set_name: Cybernetic Horizon
@@ -106,6 +114,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-FR072
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CYHO-IT034
     set_name: Cybernetic Horizon
@@ -123,6 +135,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-IT072
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CYHO-PT034
     set_name: Cybernetic Horizon
@@ -140,6 +156,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MAMA-PT072
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CYHO-JP034
     set_name: Cybernetic Horizon
