--- a/data/cards/90809975.yaml
+++ b/data/cards/90809975.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: MAMA-EN068
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   de:
   - set_number: INOV-DE052
     set_name: 'Invasion: Vengeance'
@@ -78,6 +82,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: MAMA-DE068
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: INOV-FR052
     set_name: 'Invasion: Vengeance'
@@ -91,6 +99,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: MAMA-FR068
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   it:
   - set_number: INOV-IT052
     set_name: 'Invasion: Vengeance'
@@ -104,6 +116,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: MAMA-IT068
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: INOV-PT052
     set_name: 'Invasion: Vengeance'
@@ -117,6 +133,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: MAMA-PT068
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: INOV-JP052
     set_name: 'Invasion: Vengeance'
